fix layout on mobile

--- a/assets/sass/theme/_responsive.scss
+++ b/assets/sass/theme/_responsive.scss
@@ -148,9 +148,6 @@
 				display: block;
 				box-sizing: border-box;
 				margin: 0 auto 15px;
-				&:last-child {
-					margin-left: 0;
-				}
 			}
 		}
 	}
