--- a/style.css
+++ b/style.css
@@ -907,8 +907,6 @@ html, body,
       display: block;
       box-sizing: border-box;
       margin: 0 auto 15px; }
-      #fbsection1 #download a:last-child {
-        margin-left: 0; }
 
   .iphone {
     height: auto; }
